# 2-sem

./: CMakeLists.txt  readme.md  sonar-project.properties
Akinator/: CMakeLists.txt  main.c
lab1/: CMakeLists.txt  func.c  func.h  main.c
lab2/: main.c
lab3/: CMakeLists.txt  bmp.cpp  main.c
lab4/: CMakeLists.txt
lab5/: func.c  func.h  main.c
unhgjg/: main.c
untitled1/: BMP_Read.h  bmp.c  main.c
untitled3/: CMakeLists.txt  func.c  main.c
