cmake_minimum_required(VERSION 3.9)
project(sonar_scanner_example)
project(sonar_scanner_example1)
set(CMAKE_C_STANDARD 99)

add_executable(sonar_scanner_example src/2nd_term/labs_oaip/lab4/main.c src/2nd_term/labs_oaip/lab4/tree.c)
add_executable(sonar_scanner_example1 src/2nd_term/labs_oaip/lab5/main.c src/2nd_term/labs_oaip/lab5/dns.c)
